--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -24,6 +24,7 @@
     .section-b .hash-tag .tag-item {padding:0 12px;height:28px;border-radius:14px;font-size:14px;line-height:26px;margin-right:4px}
 }
 @media (max-width:1000px) {
+    /* 메인 */
     .section-a .service-info {flex-direction:column}
     .section-a .service-info .service-item ~ .service-item {margin:30px 0 0 0}
     .section-a .section-a-title {font-size:28px;padding:0 20px}
@@ -42,6 +43,7 @@
     .section-b .review-area:nth-child(even) .review-detail {margin-left:0}
 }
 @media (max-width:767px) {
+    /* 메인 */
     .article-box .section-a {padding:40px 0 24px}
     .section-a .section-a-title {font-size:22px;word-break:keep-all}
     .section-a .service-info {padding:50px 24px 0}
