리더 반응형 ing

--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -171,7 +171,7 @@
 
 /* 리더소개 */
 .leader-section-a {max-width:1500px;position:relative;margin:0 auto}
-.leader-section-a .leader-box {max-width:1140px;border-radius:0 30px 30px;background-color:#fff;box-shadow:10px 0 10px rgba(0,0,0,.07);margin-bottom:20px}
+.leader-section-a .leader-box {max-width:76%;border-radius:0 30px 30px;background-color:#fff;box-shadow:10px 0 10px rgba(0,0,0,.07);margin-bottom:20px}
 .leader-section-a .leader-box:last-of-type {margin-bottom:40px}
 .leader-section-a .leader-title {background:url("../../resources/images/teacher/title-bg.png") no-repeat 0 0;width:305px;height:72px}
 .leader-section-a .leader-title .title-b {line-height:72px;color:#fff;padding-left:32px}
@@ -186,8 +186,8 @@
 .leader-section-a .lesson-content .lesson-col-img img {max-width:100%;vertical-align:top}
 .leader-section-a .lesson-content .lesson-item {padding-left:10px;font-size:18px;line-height:28px;color:#292a2e;position:relative;word-break:keep-all}
 .leader-section-a .lesson-content .lesson-item:before {content:'';position:absolute;left:0;top:12px;width:4px;height:4px;background-color:#292a2e;border-radius:50%}
-.leader-section-a .review-area {position:absolute;top:-50px;right:10px}
-.leader-section-a .review-area .review-item {position:relative;width:360px;background-color:#36393f;border-radius:20px;border:1px solid #2b2b2b;box-shadow:5px 0 18px rgba(26,29,36,.47);padding:30px 26px;margin-bottom:20px}
+.leader-section-a .review-area {position:absolute;top:-50px;right:6%;width:24%}
+.leader-section-a .review-area .review-item {position:relative;width:100%;background-color:#36393f;border-radius:20px;border:1px solid #2b2b2b;box-shadow:5px 0 18px rgba(26,29,36,.47);padding:30px 26px;margin-bottom:20px}
 .leader-section-a .review-area .review-item:nth-of-type(even) {margin-left:78px}
 .leader-section-a .box-star .star-data {background-image:url("../../resources/images/common/star-data-b.png")}
 .leader-section-a .review-area .txt-review {font-size:14px;line-height:20px;color:#dfdfdf;margin:20px 0;font-weight:200;display:-webkit-box;-webkit-line-clamp:4;overflow:hidden;-webkit-box-orient:vertical;max-height:80px;word-break:keep-all}
@@ -199,7 +199,7 @@
 .leader-section-a .review-area .link-more:before {width:29px;height:1px;left:0;top:50%}
 .leader-section-a .review-area .link-more:after {width:1px;height:29px;left:50%;top:0}
 
-.leader-section-b {background:url("../../resources/images/teacher/wave_bg_a.png") no-repeat 50% 100%;position:relative;height:600px}
+.leader-section-b {background:url("../../resources/images/teacher/wave_bg_a.png") no-repeat 50% 100%;position:relative;height:600px;margin-top:40px}
 .leader-section-b:after {content:'';position:absolute;left:0;right:0;bottom:0;background:url("../../resources/images/teacher/wave_bg_b.png") no-repeat 50% 0;height:336px}
 .extension-active {max-width:1500px;margin:0 auto;position:relative;padding-left:540px}
 .extension-active .leader-img {position:absolute;top:0;left:0}
@@ -221,7 +221,7 @@
 .leader-section-c .review-area:nth-of-type(3n+1) {margin-left:0;clear:both}
 .leader-section-c .review-area:nth-of-type(n+4) {margin-top:20px}
 .leader-section-c .review-area .review-item {background-color:#fff;height:164px;border-radius:20px;border:1px solid transparent;box-shadow:5px 0 18px rgba(0,0,0,.15);padding:24px 24px 0;position:relative}
-.leader-section-c .review-area .review-item .btn-more {position:absolute;top:0;height:100%;width:100%}
+.leader-section-c .review-area .review-item .btn-more {position:absolute;top:0;height:100%;width:100%;left:0}
 .leader-section-c .review-area .writer-data .writer-id {font-size:18px;color:#292a2e;font-weight:500;padding-right:20px}
 .leader-section-c .review-area .writer-data .write-day {font-size:18px;color:#292a2e;font-weight:300;padding-right:14px}
 .leader-section-c .review-area .writer-data .box-star .star-data {background-image:url("../../resources/images/common/star-data-b.png")}
