--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -61,8 +61,8 @@ body {background:#eee url('../../resources/images/common/top_bg.png') no-repeat 
 .base-wrap {position:relative;width:100%;height:100%;z-index:0;-webkit-overflow-scrolling:touch; padding-top:140px;}
 .base-main {width:100%;}
 .base-body-a {width:100%;}
-.base-footer {width:100%;background:url('../../resources/images/common/footer_bg.png') no-repeat 50% 0;height:460px}
-.base-footer.type-b {background-image:url("../../resources/images/common/footer_bg_b.png")}
+.base-footer {width:100%;background:url('../../resources/images/common/footer_bg.png') no-repeat 50% 100%;height:460px}
+.base-footer.type-b {background-image:url("../../resources/images/common/footer_bg_b.png");background-color:#e2ad46}
 
 /* base header */
 .base-header {width:100%;max-width:1640px;margin:0 auto;padding:55px 20px 20px; position:fixed; top:0; left:50%; transform: translate(-50%, 0); z-index:10;}
