--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -2,7 +2,7 @@
 
 /* 메인 */
 .teacher-group {height:1580px; position:relative;}
-.teacher-group h2 {display:block;margin:0 auto;max-width:1640px;padding:55px 20px 20px;text-align:center;color:#dfdfdf;font-size:60px;font-weight:100;}
+.teacher-group h2 {display:block;margin:0 auto;max-width:1640px;padding:0 20px 20px;text-align:center;color:#dfdfdf;font-size:60px;font-weight:100;}
 .teacher-group h2 strong {color:#2b2e34;font-weight:100;background-color:#ffcd6c;}
 .teacher-group .logo-text {color:#f8d057;}
 .teacher-group .logo-text b {font-weight:500;}
