--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -69,7 +69,7 @@ body {background:#eee url('../../resources/images/common/top_bg.png') no-repeat 
 .base-header::after{content:""; display:block; clear:both;}
 .header-area{position:relative}
 .logo-tera {display:block;float:left;}
-.util-menu {float:right;}
+.util-menu {float:right; font-size:0;}
 .util-menu > a {display:inline-block;width:55px;height:55px;border:2px solid #fff;border-radius:50%;background:url(../../resources/images/common/ico-header.png) no-repeat -2px -2px ;}
 .util-menu .util-n2 {background-position:-57px -2px;}
 .util-menu > a + a {margin-left:10px;}
