--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -58,18 +58,26 @@ font-feature-settings:'liga';
 body {background:#eee url('../../resources/images/common/top_bg.png') no-repeat 50% 0;}
 .base-skip {position:fixed;z-index:100;}
 .base-layer {position:relative;z-index:20;}
-.base-wrap {position:relative;width:100%;height:100%;z-index:0;-webkit-overflow-scrolling:touch; padding-top:140px;}
+.base-wrap {position:relative;width:100%;height:100%;z-index:0;-webkit-overflow-scrolling:touch; padding-top:110px;}
 .base-main {width:100%;}
 .base-body-a {width:100%;}
-.base-footer {width:100%;background:url('../../resources/images/common/footer_bg.png') no-repeat 50% 100%;height:460px}
-.base-footer.type-b {background-image:url("../../resources/images/common/footer_bg_b.png");background-color:#e2ad46}
+.base-footer {width:100%;background:url('../../resources/images/common/footer_bg.png') no-repeat 50% 0;height:460px}
+.base-footer.type-b {background-image:url("../../resources/images/common/footer_bg_b.png")}
 
 /* base header */
-.base-header {width:100%;max-width:1640px;margin:0 auto;padding:55px 20px 20px; position:fixed; top:0; left:50%; transform: translate(-50%, 0); z-index:10;}
+.sticky .base-header{background:#1f2023; padding:20px 20px 15px; max-width:100%;}
+.sticky .logo-tera {display:block;float:left; width:81px; }
+.sticky .logo-tera img{width:100%; display: block;}
+.sticky .util-menu{top:-10px; }
+.sticky .util-menu > a {width:30px;height:30px;border:1px solid #fff;border-radius:50%;background:url(../../resources/images/common/ico-header.png) no-repeat -3.5px -5px / 70px;}
+.sticky .util-menu .util-n2 {background-position:-38.5px -5px;}
+.sticky .util-menu > a + a {margin-left:5px;}
+
+.base-header {width:100%;max-width:1640px;margin:0 auto;padding:40px 20px 20px; position:fixed; top:0; left:50%; transform: translate(-50%, 0); z-index:10; background:transparent; transition:all .2s ease-out;}
 .base-header::after{content:""; display:block; clear:both;}
 .header-area{position:relative}
 .logo-tera {display:block;float:left;}
-.util-menu {float:right; font-size:0;}
+.util-menu {position:absolute; top:-10px; right:0; font-size:0; }
 .util-menu > a {display:inline-block;width:55px;height:55px;border:2px solid #fff;border-radius:50%;background:url(../../resources/images/common/ico-header.png) no-repeat -2px -2px ;}
 .util-menu .util-n2 {background-position:-57px -2px;}
 .util-menu > a + a {margin-left:10px;}
@@ -80,7 +88,6 @@ body {background:#eee url('../../resources/images/common/top_bg.png') no-repeat 
 .goldkey .key-line{display:block; position: absolute; top:0; left:27px;}
 .goldkey .key{display:block; position: absolute; top:110px; left:10px; width:45px; height:67px; transform-origin:50%; transform:rotateY(0deg); transition: transform .5s ease-out; background: url(../../resources/images/common/key2.png) no-repeat 0 0;}
 .goldkey .key:hover{transform:rotateY(360deg);}
-
 .goldkey.active{animation-name:keyani; animation-duration:.9s; animation-iteration-count:1; animation-timing-function:ease-out; animation-fill-mode: forwards; transform-origin:top center;}
 
 @keyframes keyani {
@@ -94,6 +101,12 @@ body {background:#eee url('../../resources/images/common/top_bg.png') no-repeat 
     97% {transform:rotate(0.2deg);}
     100% {transform:rotate(0deg);}
 }
+
+.sticky .goldkey{position: absolute; top:20px; left:-15px; z-index: 100; width:45px; }
+.sticky .goldkey .key-line{display:block; position: absolute; top:0; left:27px; height:50px;}
+.sticky .goldkey .key-line img{height:100%;}
+.sticky .goldkey .key{top:50px; left:18px; width:22px; height:34px; transform-origin:50%; transform:rotateY(0deg); transition: transform .5s ease-out; background: url(../../resources/images/common/key2.png) no-repeat 0 0/ cover;}
+
 /* footer */
 .footer-area {max-width:1304px;margin:0 auto;padding-top:290px}
 .footer-content {position:relative;padding-left:246px}
