--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -124,3 +124,9 @@ body {background:#eee url('../../resources/images/common/top_bg.png') no-repeat 
 .btn-gold:hover,
 .btn-gold:focus{background: linear-gradient(-44deg, #633f00,#674100 40%, #a46d00, #925f00); border-color:#80590d;box-shadow:0 0 8px rgba(0,0,0,.9); }
 .btn-gold.selected{background: linear-gradient(-46deg, #242424,#2c2c2c 40%, #3f3f3f, #393939); border-color:#3e3e3e;}
+.btn-top {width:88px;height:90px;display:block;background:url("../../resources/images/common/btn_top.png") no-repeat 0 0 rgba(0,0,0,.1);background-size:100%;border-radius:50%}
+.btn-kakao {width:88px;height:90px;display:block;background:url("../../resources/images/common/btn_kakao.png") no-repeat 0 0 rgba(0,0,0,.1);background-size:100%;border-radius:50%}
+
+/* side nav */
+.side-nav {position:fixed;right:30px;bottom:30px}
+.side-nav .btn-kakao {margin-top:10px}
