--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -103,10 +103,25 @@
 .leader-info .chara-item .ico{display:inline-block; width:150px; height:150px; background:url(../../resources/images/common/ico-char.png) no-repeat 0 0;}
 .leader-info .chara-item .txt{display:block; width:100%; font-size:21px; color:#fff; word-break: keep-all;}
 
+.leader-info .btn-area{height:100px;}
 .leader-info .btn-gold{position:relative; height:100px; border-radius:50px; padding:20px 85px; font-size:38px; margin:0; font-weight:500; font-family:'Noto Sans KR'; background: linear-gradient(-69deg,#e2a936, #a27623, #dda93e 70%, #ebbc4c 80%, #fdeaa6);}
 .leader-info .btn-gold::before{content:""; display:block; width:250px; height:250px; background: url(../../resources/images/common/light.png) no-repeat 0 0; position:absolute; top:-90px;left:-112px; }
 .leader-info .btn-gold:focus,
 .leader-info .btn-gold:hover{color:#fff;background: linear-gradient(-44deg, #633f00,#674100 40%, #a46d00, #925f00);}
+
+.leader-btn-fix .leader-info .btn-gold::before{display:none;}
+.leader-btn-fix .leader-info .btn-gold{
+    transition:unset;
+    position:fixed;
+    left:0;
+    width:100%;
+    font-size: 18px;
+    height:40px; 
+    border-radius:0; 
+    padding:5px 0 ; 
+    z-index: 1;
+
+}
 
 .article-box {max-width:1500px;margin:0 auto}
 .article-box .section-a {margin:0 24px;border-radius:30px;background-color:#2e3036;box-shadow:0 -5px 10px rgba(0,0,0,.3);padding:55px 0 78px;position:relative}
