--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -65,7 +65,7 @@ body {background:#eee url('../../resources/images/common/top_bg.png') no-repeat 
 .base-footer.type-b {background-image:url("../../resources/images/common/footer_bg_b.png")}
 
 /* base header */
-.sticky .base-header{background:#1f2023; padding:20px 20px 15px; max-width:100%;}
+.sticky .base-header{background:#1f2023; padding:20px 20px 14px; max-width:100%; height:50px;}
 .sticky .logo-tera {display:block;float:left; width:81px; }
 .sticky .logo-tera img{width:100%; display: block;}
 .sticky .util-menu{top:-10px; }
