--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -101,7 +101,9 @@
 .leader-info .chara .line{display:block; flex:1; max-width:115px; min-width:115px;  width:100%; height:6px; background: url(../../resources/images/common/line-dot.png) repeat-x 0 0;margin:75px 15px 0;}
 .leader-info .chara-item{flex:0; text-align: center; width:170px; min-width:170px; position: relative; z-index: 1;}
 .leader-info .chara-item .ico{display:inline-block; width:150px; height:150px; background:url(../../resources/images/common/ico-char.png) no-repeat 0 0;}
-.leader-info .chara-item .txt{display:block; width:100%; font-size:21px; color:#fff; word-break: keep-all;}
+.leader-info .chara-item .ico-img {display:inline-block;width:150px;height:150px;margin-bottom:12px}
+.leader-info .chara-item .ico-img img {width:100%;vertical-align:top}
+.leader-info .chara-item .txt{display:flex;width:100%; font-size:21px; color:#fff; word-break: keep-all;align-items:center;height:62px;justify-content:center}
 
 .leader-info .btn-gold{position:relative; height:100px; border-radius:50px; padding:20px 85px; font-size:38px; margin:0; font-weight:500; font-family:'Noto Sans KR'; background: linear-gradient(-69deg,#e2a936, #a27623, #dda93e 70%, #ebbc4c 80%, #fdeaa6);}
 .leader-info .btn-gold::before{content:""; display:block; width:250px; height:250px; background: url(../../resources/images/common/light.png) no-repeat 0 0; position:absolute; top:-90px;left:-112px; }
