--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -62,7 +62,7 @@
     .btn-area.line{margin-top:10px;}
 
     .leader-info{margin:0 auto 370px;}
-    .leader-info .photo{position: static;float:right; max-width: 100%; width:auto; height:280px}
+    .leader-info .photo{position: static;float:right; max-width: 100%; width:auto; height:280px; margin:-40px 0 40px;}
 
 
 
@@ -76,11 +76,16 @@
     .leader-info .tag {margin-top:30px; max-width:100%; }
     .leader-info .tag span{display:inline-block;height:30px;border-radius:15px;border:1px solid #848484;font-size:16px;font-weight:600;color:#848484;line-height:28px;padding:0 14px;margin:0 5px 10px 0;}
 
-    .leader-info .chara{position:relative; margin:80px auto 80px; width:100%; max-width:1500px; overflow:hidden; display:flex; justify-content:center}
-    .leader-info .chara .line{display:block; flex:1; max-width:115px; min-width:115px;  width:100%; height:6px; background: url(../../resources/images/common/line-dot.png) repeat-x 0 0;margin:75px 15px 0;}
-    .leader-info .chara-item{flex:0; text-align: center; width:170px; min-width:170px; position: relative; z-index: 1;}
-    .leader-info .chara-item .ico{display:inline-block; width:150px; height:150px; background:url(../../resources/images/common/ico-char.png) no-repeat 0 0;}
-    .leader-info .chara-item .txt{display:block; width:100%; font-size:21px; color:#fff; word-break: keep-all;}
+    .leader-info .chara{position:relative; margin:30px auto 30px; width:100%; max-width:1500px; overflow:hidden; display:flex; justify-content:center}
+    .leader-info .chara .line{display:block; flex:1; max-width:40px; min-width:40px;  width:100%; height:6px; background: url(../../resources/images/common/line-dot.png) repeat-x 0 0;margin:35px 15px 0;}
+
+    .leader-info .chara-item{flex:0; text-align: center; width:80px; min-width:80px; position: relative; z-index: 1;}
+
+    .leader-info .chara-item .ico-img{display:inline-block; width:75px; height:75px; margin-bottom:0;}
+    .leader-info .chara-item .ico-img img{width:100%;}
+    .leader-info .chara-item .txt{font-size:14px;}
+
+    .leader-info .btn-gold::before{background-size:cover; width:100px; height:100px; top:-30px; left:-42px;}
 }
 @media (max-width:1340px) {
     /* 메인 */
