--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -88,8 +88,8 @@
 
 
 .leader-info{position:relative; width:100%; max-width:1600px; margin:0 auto 370px;}
-.leader-info .photo{position: absolute; right:45px; top:45px; max-width: calc(100% - 990px); width: max-content;}
-.leader-info .group{position: relative;  padding:60px 70px 0;}
+.leader-info .photo{position: absolute; right:45px; top:0; max-width: calc(100% - 990px); width: max-content;}
+.leader-info .group{position: relative;  padding:0 70px}
 .leader-info .group h2{font-size:90px;font-weight:100;color:#fff; line-height:1.1;overflow: hidden;}
 .leader-info .group h2 span{opacity:0.3;display:block; width:100%;}
 .leader-info .group em{display:block; margin-top:-5px; float:left; font-size:60px; color:#ffe36f; font-weight:100;border-bottom:4px solid #fff28c; font-family: 'Noto Sans TC', sans-serif; padding-bottom:10px}
@@ -97,7 +97,7 @@
 .leader-info .tag {position:relative; margin-top:40px; max-width:680px; width:100%;}
 .leader-info .tag span{display:inline-block;height:60px;border-radius:30px;border:2px solid #848484;font-size:24px;font-weight:600;color:#848484;line-height:58px;padding:0 28px;margin:0 10px 20px 0;}
 
-.leader-info .chara{position:relative; margin:80px auto 80px; width:100%; max-width:1500px; overflow:hidden; display:flex; justify-content:center}
+.leader-info .chara{position:relative; margin:30px auto; width:100%; max-width:1500px; overflow:hidden; display:flex; justify-content:center}
 .leader-info .chara .line{display:block; flex:1; max-width:115px; min-width:115px;  width:100%; height:6px; background: url(../../resources/images/common/line-dot.png) repeat-x 0 0;margin:75px 15px 0;}
 .leader-info .chara-item{flex:0; text-align: center; width:170px; min-width:170px; position: relative; z-index: 1;}
 .leader-info .chara-item .ico{display:inline-block; width:150px; height:150px; background:url(../../resources/images/common/ico-char.png) no-repeat 0 0;}
@@ -105,8 +105,8 @@
 .leader-info .chara-item .ico-img img {width:100%;vertical-align:top}
 .leader-info .chara-item .txt{display:flex;width:100%; font-size:21px; color:#fff; word-break: keep-all;align-items:center;height:62px;justify-content:center}
 
-.leader-info .btn-area{height:100px;}
-.leader-info .btn-gold{position:relative; height:100px; border-radius:50px; padding:20px 80px; font-size:38px; margin:0; font-weight:500; font-family:'Noto Sans KR'; background: linear-gradient(-69deg,#e2a936, #a27623, #dda93e 70%, #ebbc4c 80%, #fdeaa6);}
+.leader-info .btn-area{height:80px;}
+.leader-info .btn-gold{position:relative; height:80px; border-radius:40px; padding:12px 60px; font-size:34px; margin:0; font-weight:500; font-family:'Noto Sans KR'; background: linear-gradient(-69deg,#e2a936, #a27623, #dda93e 70%, #ebbc4c 80%, #fdeaa6);}
 .leader-info .btn-gold::before{content:""; display:block; width:250px; height:250px; background: url(../../resources/images/common/light.png) no-repeat 0 0; position:absolute; top:-90px;left:-112px; }
 .leader-info .btn-gold:focus,
 .leader-info .btn-gold:hover{color:#fff;background: linear-gradient(-44deg, #633f00,#674100 40%, #a46d00, #925f00);}
