--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -89,7 +89,7 @@
 
 .leader-info{position:relative; width:100%; max-width:1600px; margin:0 auto 370px;}
 .leader-info .photo{position: absolute; right:45px; top:-80px; max-width: calc(100% - 780px); width: max-content;}
-.leader-info .group{position: relative;  padding:0 70px}
+.leader-info .group{position: relative;  padding:30px 70px 0}
 .leader-info .group h2{font-size:80px;font-weight:100;color:#fff; line-height:1.1;overflow: hidden;}
 .leader-info .group h2 span{opacity:0.3;display:block; width:100%;}
 .leader-info .group em{display:block; margin-top:-5px; float:left; font-size:54px; color:#ffe36f; font-weight:100;border-bottom:4px solid #fff28c; font-family: 'Noto Sans TC', sans-serif; padding-bottom:10px}
