--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -61,7 +61,7 @@
 
     .btn-area.line{margin-top:10px;}
 
-    .leader-info{margin:0 auto 370px;}
+    .leader-info{margin-bottom:100px}
     .leader-info .photo{position: static;float:right; max-width: 100%; width:auto; height:280px; margin:-40px 0 40px;}
 
 
